nombre de base de datos

--- a/src/main/resources/archetype-resources/src/main/resources/jpa/jdbc.properties
+++ b/src/main/resources/archetype-resources/src/main/resources/jpa/jdbc.properties
@@ -3,7 +3,7 @@
 #set( $symbol_escape = '\' )
 ${symbol_pound}POSTGRESQL
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/arquitectura
+jdbc.url=jdbc:postgresql://localhost:5432/${artifactId}
 jdbc.username=postgres
 jdbc.password=postgres
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
